# raytracing

./: .gitignore  CMakeLists.txt  Info.plist.in
dependencies/AppKit/: AppKitPrivate.hpp  NSView.hpp
dependencies/Foundation/: NSDate.hpp  NSPrivate.hpp
dependencies/Metal/: MTLRenderPass.hpp
dependencies/MetalKit/: MetalKitPrivate.hpp
shaders/: intersection.h  material.h  material.metal  mesh.h  object.h  random.h  ray.h  scene.h  sphere.h  texture.metal  tracer.metal  triangle.h
src/app/: appDelegate.cpp  appDelegate.h  constants.h  viewDelegate.cpp  viewDelegate.h
src/models/: allModels.cpp  allModels.h  centralObject.h  cpuObjects.h  floor.h  roof.h  roofLight.h  room.h  scene1.h  scene2.h  wallEast.h  wallNorth.h  wallSouth.h  wallWest.h
src/render/: object.h  renderer.cpp  renderer.h
src/runtime/: main.cpp  parser.cpp  parser.h
src/utils/: camera.cpp  camera.h  devices.cpp  devices.h  displayScale.mm
